vemo-app/main/default/objects/StudentProgramAudit__c/fields/SendApplicationDeniedReapply__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationDeniedReapply__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked the system will generate the Application Denied - Please Reapply notification</inlineHelpText>
    <label>Send Application Denied - Reapply</label>
    <type>Checkbox</type>
</CustomField>