vemo-app/main/default/objects/StudentProgramAudit__c/fields/SendApplicationReviewApproved__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationReviewApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this field is checked the system will generate the Application Review Approved notification</inlineHelpText>
    <label>Send Application Review Approved</label>
    <type>Checkbox</type>
</CustomField>