vemo-app/main/default/objects/StudentProgramAudit__c/fields/SendNotCertified__c.field-meta.xml
<CustomField>
    <fullName>SendNotCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Not Certified</label>
    <type>Checkbox</type>
</CustomField>