vemo-app/main/default/objects/StudentProgramAudit__c/fields/Servicing__c.field-meta.xml
<CustomField>
    <fullName>Servicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicing</label>
    <type>Checkbox</type>
</CustomField>