vemo-app/main/default/objects/StudentProgramAudit__c/fields/ServicingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServicingStartDate__c</fullName>
    <label>Servicing Start Date</label>
    <type>Date</type>
</CustomField>