vemo-app/main/default/objects/StudentProgramAudit__c/fields/SetRTCDates__c.field-meta.xml
<CustomField>
    <fullName>SetRTCDates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set RTC Dates</label>
    <type>Checkbox</type>
</CustomField>