vemo-app/main/default/objects/StudentProgramAudit__c/fields/SignedAgreementID__c.field-meta.xml
<CustomField>
    <fullName>SignedAgreementID__c</fullName>
    <label>Signed AgreementID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>