vemo-app/main/default/objects/StudentProgramAudit__c/fields/StateOfResidencePreCertification__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidencePreCertification__c</fullName>
    <label>State of Residence (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>