vemo-app/main/default/objects/StudentProgramAudit__c/fields/StateOfResidenceStudent__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidenceStudent__c</fullName>
    <label>State of Residence (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>