vemo-app/main/default/objects/StudentProgramAudit__c/fields/StudentEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentEmail__c</fullName>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>