vemo-app/main/default/objects/StudentProgramAudit__c/fields/StudentProgram__c.field-meta.xml
<CustomField>
    <fullName>StudentProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Program</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Student Program Audit</relationshipLabel>
    <relationshipName>Student_Program_History</relationshipName>
    <type>Lookup</type>
</CustomField>