vemo-app/main/default/objects/StudentProgramAudit__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>